log/build_2023-11-02_00-40-56/manos_manager/stdout_stderr.log
running egg_info
writing ../../build/manos_manager/manos_manager.egg-info/PKG-INFO
writing dependency_links to ../../build/manos_manager/manos_manager.egg-info/dependency_links.txt
writing entry points to ../../build/manos_manager/manos_manager.egg-info/entry_points.txt
writing requirements to ../../build/manos_manager/manos_manager.egg-info/requires.txt
writing top-level names to ../../build/manos_manager/manos_manager.egg-info/top_level.txt
reading manifest file '../../build/manos_manager/manos_manager.egg-info/SOURCES.txt'
writing manifest file '../../build/manos_manager/manos_manager.egg-info/SOURCES.txt'
running build
running build_py
copying manos_manager/mm.py -> /home/keny/MANOS_ws/build/manos_manager/build/lib/manos_manager
running install
running install_lib
copying /home/keny/MANOS_ws/build/manos_manager/build/lib/manos_manager/mm.py -> /home/keny/MANOS_ws/install/manos_manager/lib/python3.8/site-packages/manos_manager
byte-compiling /home/keny/MANOS_ws/install/manos_manager/lib/python3.8/site-packages/manos_manager/mm.py to mm.cpython-38.pyc
  File "/home/keny/MANOS_ws/install/manos_manager/lib/python3.8/site-packages/manos_manager/mm.py", line 32
    self.subscriber = self.create_node(Pos, self.menuItem, TurtleSimControl.teleport_turtle,self.qos_profile))
                                                                                                             ^
SyntaxError: unmatched ')'

running install_data
running install_egg_info
removing '/home/keny/MANOS_ws/install/manos_manager/lib/python3.8/site-packages/manos_manager-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/manos_manager/manos_manager.egg-info to /home/keny/MANOS_ws/install/manos_manager/lib/python3.8/site-packages/manos_manager-0.0.0-py3.8.egg-info
running install_scripts
writing list of installed files to '/home/keny/MANOS_ws/build/manos_manager/install.log'
